improved retry/play window, fixed jump animation, fixed bench hitbox

--- a/style.scss
+++ b/style.scss
@@ -96,6 +96,7 @@
       position: fixed;
       background-color: transparent;   
       image-rendering: pixelated; 
+      display: none;
 
     }
 
@@ -138,7 +139,7 @@
       z-index: 2;
       position: fixed;
       background-color: transparent;    
-
+      display: none;
     }
 
     .main__obstacle-hider {
@@ -169,13 +170,19 @@
       position: absolute;
       height: 100%;
       width: 100%;
-      background-color: rgb(97, 171, 97);
+      background-color: black;
+      opacity: 30%;
     }
 
     .main__play-retry-button {
       height: 2rem;
       width: 3rem;
-      background-color: rgb(67, 175, 215);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      background-color: rgb(16, 214, 16);
+      z-index: 3;
       font-family: sans-serif;
     }
 }
